--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,6 +43,10 @@
     box-sizing: border-box;
   }
 
+  html, body {
+    overflow-x: hidden;
+  }
+
   body {
     background-color: var(--background);
     color: var(--foreground);
